--- a/Python for Data Science/Introduction to Python for Data Science.ipynb
+++ b/Python for Data Science/Introduction to Python for Data Science.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 131,
       "id": "1452b8fe",
       "metadata": {
         "colab": {
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 132,
       "id": "4a011d3c",
       "metadata": {
         "id": "4a011d3c",
@@ -265,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 133,
       "id": "1f97bae9",
       "metadata": {
         "id": "1f97bae9",
@@ -303,7 +303,7 @@
         "\n",
         "- What is the data science workflow? Let's take a look!\n",
         "\n",
-        "![From R for Data Science 2nd Edition](Data Science Workflow.png)\n",
+        "![From R for Data Science 2nd Edition](Data%20Science%20Workflow.png)\n",
         "\n",
         "## Importing Data/Data Loading\n",
         "\n",
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 134,
       "id": "ea6486b8",
       "metadata": {
         "id": "ea6486b8"
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 135,
       "id": "51e3e139",
       "metadata": {
         "id": "51e3e139",
@@ -400,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 136,
       "id": "16b8d5e2",
       "metadata": {
         "id": "16b8d5e2",
@@ -437,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 137,
       "id": "70b90a76",
       "metadata": {
         "id": "70b90a76",
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 138,
       "id": "d32ece25",
       "metadata": {
         "id": "d32ece25",
@@ -575,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 139,
       "id": "8eb118a1",
       "metadata": {
         "id": "8eb118a1",
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 140,
       "id": "f084455a",
       "metadata": {
         "id": "f084455a",
@@ -684,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 141,
       "id": "f1f80e4f",
       "metadata": {
         "id": "f1f80e4f",
@@ -742,7 +742,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 142,
       "id": "421a2b96",
       "metadata": {
         "id": "421a2b96",
@@ -784,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 143,
       "id": "97afb0a1",
       "metadata": {
         "id": "97afb0a1",
@@ -828,7 +828,7 @@
         "    2. Each observation is a row; each row is an observation.\n",
         "    3. Each value has is a cell; each cell is a single value.\n",
         "\n",
-        "![From R for Data Science 2nd Edition](https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Python%20for%20Data%20Science/Tidy%20Data%20Structure.png?raw=1)\n",
+        "![From R for Data Science 2nd Edition](Tidy%20Data%20Structure.png)\n",
         "\n",
         "- Why should we care about having our data in tidy format? There are two key reasons:\n",
         "\n",
