--- a/Comparative Experiments/Introduction to Completely Randomized Designs.ipynb
+++ b/Comparative Experiments/Introduction to Completely Randomized Designs.ipynb
@@ -14,25 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "c32244db",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'github_username' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
-      "Cell \u001b[1;32mIn[34], line 10\u001b[0m\n",
-      "\u001b[0;32m      7\u001b[0m repo_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSTAT-7220-Applied-Experimental-Design\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# 3. Build the full repo URL for cloning\u001b[39;00m\n",
-      "\u001b[1;32m---> 10\u001b[0m repo_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://github.com/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mgithub_username\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrepo_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.git\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n",
-      "\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# --- Detect if we're already in a repo ---\u001b[39;00m\n",
-      "\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'github_username' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Changed directory to: d:\\KSU\\Teaching\\STAT 7220\\STAT-7220-Applied-Experimental-Design\\STAT-7220-Applied-Experimental-Design\\Comparative Experiments\n"
      ]
     }
    ],
@@ -43,46 +33,46 @@
     "#github_username = \"abrown9008\"\n",
     "\n",
     "# 2. Name of the repo (don't change unless your fork name is different)\n",
-    "repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
+    "#repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
     "\n",
     "# 3. Build the full repo URL for cloning\n",
-    "repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
+    "#repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
     "\n",
     "import os\n",
     "\n",
     "# --- Detect if we're already in a repo ---\n",
-    "cwd = os.getcwd()\n",
-    "if cwd.endswith(repo_name):\n",
-    "    print(f\"✅ Already inside repo folder: {cwd}\")\n",
-    "else:\n",
+    "#cwd = os.getcwd()\n",
+    "#if cwd.endswith(repo_name):\n",
+    "#    print(f\"✅ Already inside repo folder: {cwd}\")\n",
+    "#else:\n",
     "    # --- If the repo folder exists, check if it's nested ---\n",
-    "    if os.path.exists(repo_name):\n",
-    "        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
-    "    else:\n",
-    "        print(f\"📥 Cloning repo from {repo_url}...\")\n",
-    "        os.system(f\"git clone {repo_url}\")\n",
+    "#    if os.path.exists(repo_name):\n",
+    "#        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
+    "#    else:\n",
+    "#        print(f\"📥 Cloning repo from {repo_url}...\")\n",
+    "#        os.system(f\"git clone {repo_url}\")\n",
     "\n",
     "    # --- Change to repo directory ---\n",
-    "    if os.path.exists(repo_name):\n",
-    "        os.chdir(repo_name)\n",
-    "        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
-    "    else:\n",
-    "        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
+    "#    if os.path.exists(repo_name):\n",
+    "#        os.chdir(repo_name)\n",
+    "#        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
+    "#    else:\n",
+    "#        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
     "\n",
     "# --- Check if this is the instructor's repo instead of student's fork ---\n",
     "# This command needs to be run from within the repository directory\n",
-    "remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
+    "#remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
     "\n",
-    "if \"abrown9008\" in remote_url:\n",
-    "    print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
-    "    print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
-    "else:\n",
-    "    print(f\"🔗 Connected to fork at: {remote_url}\")\n",
+    "#if \"abrown9008\" in remote_url:\n",
+    "#    print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
+    "#    print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
+    "#else:\n",
+    "#    print(f\"🔗 Connected to fork at: {remote_url}\")\n",
     "\n",
     "# Set Today's Directory #\n",
     "\n",
-    "today_dir = \"Comparative Experiments\"\n",
-    "os.chdir(today_dir)\n",
+    "#today_dir = \"Comparative Experiments\"\n",
+    "#os.chdir(today_dir)\n",
     "print(f\"📂 Changed directory to: {os.getcwd()}\")"
    ]
   },
@@ -189,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "810cfcac",
    "metadata": {},
    "outputs": [
@@ -294,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "af97cc7a",
    "metadata": {},
    "outputs": [
@@ -362,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "69cf2e95",
    "metadata": {},
    "outputs": [
@@ -474,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "35ea4378",
    "metadata": {},
    "outputs": [
@@ -559,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "89732073",
    "metadata": {},
    "outputs": [
