Fix directory code

--- a/Comparative Experiments/Checking-ANOVA-Assumptions.ipynb
+++ b/Comparative Experiments/Checking-ANOVA-Assumptions.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e791d2fe",
    "metadata": {},
    "outputs": [
@@ -85,8 +85,8 @@
     "\n",
     "# Set Today's Directory #\n",
     "\n",
-    "today_dir = \"Comparative Experiments\"\n",
-    "os.chdir(today_dir)\n",
+    "#today_dir = \"Comparative Experiments\"\n",
+    "#os.chdir(today_dir)\n",
     "print(f\"📂 Changed directory to: {os.getcwd()}\")"
    ]
   },
