Adding RBD files

--- a/Comparative Experiments/Multiple-Group-Comparisons.ipynb
+++ b/Comparative Experiments/Multiple-Group-Comparisons.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "- In the last [!lecture](https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Comparative%20Experiments/Introduction%20to%20Completely%20Randomized%20Designs.ipynb), we learned about techniques we can use in a completely randomized design.\n",
+    "- In the last [lecture](https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Comparative%20Experiments/Introduction%20to%20Completely%20Randomized%20Designs.ipynb), we learned about techniques we can use in a completely randomized design.\n",
     "\n",
     "    - The independent means $t$-test and one-way ANOVA\n",
     "\n",
