Adding markdown table to RBD file

--- a/Random Block Design and Latin Squares/Intro-to-Randomized-Block-Design.ipynb
+++ b/Random Block Design and Latin Squares/Intro-to-Randomized-Block-Design.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "39e0cd1f",
    "metadata": {},
    "outputs": [
@@ -85,8 +85,8 @@
     "\n",
     "# Set Today's Directory #\n",
     "\n",
-    "today_dir = \"Random Block Design and Latin Squares\"\n",
-    "os.chdir(today_dir)\n",
+    "#today_dir = \"Random Block Design and Latin Squares\"\n",
+    "#os.chdir(today_dir)\n",
     "print(f\"📂 Changed directory to: {os.getcwd()}\")"
    ]
   },
@@ -386,7 +386,16 @@
     "    - $\\bar{y}_{\\cdot j}$ represents the sample mean of the $j$th block, and \n",
     "    - $\\bar{y}_{\\cdot\\cdot}$ represents the overall sample mean.\n",
     "\n",
-    "- Compliling all of this into a standard ANOVA table:"
+    "- Compliling all of this into a standard ANOVA table:\n",
+    "\n",
+    "**Table: ANOVA Table for Randomized Block Design with One Blocking Factor**\n",
+    "\n",
+    "| Source      | SS         | df              | Mean Square                      | F-Ratio                  |\n",
+    "|-------------|------------|-----------------|----------------------------------|--------------------------|\n",
+    "| Treatments  | SSTreat    | \\(t - 1\\)       | \\(\\frac{SSTreat}{t - 1}\\)        | \\(\\frac{MSTreat}{MSE}\\)  |\n",
+    "| Blocks      | SSBlocks   | \\(b - 1\\)       | \\(\\frac{SSBlock}{b - 1}\\)        |                          |\n",
+    "| Error       | SSE        | \\((t - 1)(b - 1)\\) | \\(\\frac{SSE}{(t - 1)(b - 1)}\\) |                          |\n",
+    "| Total       | SST        | \\(N - 1\\)       |                                  |                          |\n"
    ]
   }
  ],
