--- a/Random Block Design and Latin Squares/Intro-to-Randomized-Block-Design.ipynb
+++ b/Random Block Design and Latin Squares/Intro-to-Randomized-Block-Design.ipynb
@@ -14,29 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "39e0cd1f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified: 'Random Block Design and Latin Squares'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)\n",
-      "Cell \u001b[1;32mIn[9], line 46\u001b[0m\n",
-      "\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# --- Detect if we're already in a repo ---\u001b[39;00m\n",
-      "\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m#cwd = os.getcwd()\u001b[39;00m\n",
-      "\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m#if cwd.endswith(repo_name):\u001b[39;00m\n",
-      "\u001b[1;32m   (...)\u001b[0m\n",
-      "\u001b[0;32m     42\u001b[0m \n",
-      "\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Set Today's Directory #\u001b[39;00m\n",
-      "\u001b[0;32m     45\u001b[0m today_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRandom Block Design and Latin Squares\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;32m---> 46\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtoday_dir\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;32m     47\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m📂 Changed directory to: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mgetcwd()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'Random Block Design and Latin Squares'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Changed directory to: d:\\KSU\\Teaching\\STAT 7220\\STAT-7220-Applied-Experimental-Design\\STAT-7220-Applied-Experimental-Design\\Random Block Design and Latin Squares\n"
      ]
     }
    ],
@@ -182,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "69367339",
    "metadata": {},
    "outputs": [
@@ -261,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0cc0cb01",
    "metadata": {},
    "outputs": [
