Fix markdown table latex code

--- a/Random Block Design and Latin Squares/Intro-to-Randomized-Block-Design.ipynb
+++ b/Random Block Design and Latin Squares/Intro-to-Randomized-Block-Design.ipynb
@@ -378,10 +378,10 @@
     "\n",
     "| Source      | SS         | df              | Mean Square                      | F-Ratio                  |\n",
     "|-------------|------------|-----------------|----------------------------------|--------------------------|\n",
-    "| Treatments  | SSTreat    | \\(t - 1\\)       | \\(\\frac{SSTreat}{t - 1}\\)        | \\(\\frac{MSTreat}{MSE}\\)  |\n",
-    "| Blocks      | SSBlocks   | \\(b - 1\\)       | \\(\\frac{SSBlock}{b - 1}\\)        |                          |\n",
-    "| Error       | SSE        | \\((t - 1)(b - 1)\\) | \\(\\frac{SSE}{(t - 1)(b - 1)}\\) |                          |\n",
-    "| Total       | SST        | \\(N - 1\\)       |                                  |                          |\n"
+    "| Treatments  | SSTreat    | $(t - 1)$       | $\\frac{SSTreat}{t - 1}$        | $\\frac{MSTreat}{MSE}$  |\n",
+    "| Blocks      | SSBlocks   | $(b - 1)$       | $\\frac{SSBlock}{b - 1}$        |                          |\n",
+    "| Error       | SSE        | $(t - 1)(b - 1)$ | $\\frac{SSE}{(t - 1)(b - 1)}$ |                          |\n",
+    "| Total       | SST        | $N - 1$       |                                  |                          |\n"
    ]
   }
  ],
