Delete unnecessary files and correct header

--- a/Random Block Design and Latin Squares/Intro-to-Randomized-Block-Design.ipynb
+++ b/Random Block Design and Latin Squares/Intro-to-Randomized-Block-Design.ipynb
@@ -5,8 +5,8 @@
    "id": "516fcbf1",
    "metadata": {},
    "source": [
-    "# Assumption Checking\n",
-    "# Evaluating Reliability of Inferential ANOVA Methods\n",
+    "# Introduction to Randomized Block Design\n",
+    "# Incorporating Additional Sources of Variation in Our Designs\n",
     "## Dr Austin R Brown\n",
     "## School of Data Science and Analytics\n",
     "### Kennesaw State University"
