Updating README and adding link for student guide

--- a/Python for Data Science/Getting Started with GitHub and Google Colab for Assignment Submissions.ipynb
+++ b/Python for Data Science/Getting Started with GitHub and Google Colab for Assignment Submissions.ipynb
@@ -8,8 +8,8 @@
     "# 📄 Student Guide: Submitting Assignments via Branches in GitHub + Google Colab\n",
     "## Part 1 – Setup at the Start of the Semester\n",
     "\n",
-    "**1. Fork the Instructor’s Repository**\n",
-    "    - Go to the instructor’s GitHub repository link.\n",
+    "**1. Fork the Class Repository**\n",
+    "    - Go to my class GitHub repository [link](https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design).\n",
     "    - Click **\"Fork\"** (top right) to create your own copy under your GitHub account.\n",
     "    - To keep your assignments and coursework **private**, within your forked repo, you must:\n",
     "        - Go to **Settings → Collaborators and Teams**\n",
