Adding ANOVA table

--- a/Factorial Designs/Intro-to-Factorial-Designs.ipynb
+++ b/Factorial Designs/Intro-to-Factorial-Designs.ipynb
@@ -14,18 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "2a5307b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📂 Changed directory to: d:\\KSU\\Teaching\\STAT 7220\\STAT-7220-Applied-Experimental-Design\\STAT-7220-Applied-Experimental-Design\\Factorial Designs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === COURSE REPO SETUP === #\n",
     "\n",
@@ -149,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "52405614",
    "metadata": {},
    "outputs": [
@@ -208,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "386df85b",
    "metadata": {},
    "outputs": [
@@ -247,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "e91a4d72",
    "metadata": {},
    "outputs": [
@@ -296,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "c8545537",
    "metadata": {},
    "outputs": [
@@ -367,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "a4b398b3",
    "metadata": {},
    "outputs": [
@@ -503,7 +495,7 @@
    "source": [
     "## Inferential Analysis\n",
     "\n",
-    "-   Now that we have performed our appropriate descriptive analyses, we can go ahead and perform our inferential analyses in basically the same manner as before, beginning with the specification of our statistical hypotheses.\n",
+    "- Now that we have performed our appropriate descriptive analyses, we can go ahead and perform our inferential analyses in basically the same manner as before, beginning with the specification of our statistical hypotheses.\n",
     "\n",
     "- Here, since we have two treatment effects and an interaction effect that are part of our experiment, we technically have three sets of statistical hypotheses we test.\n",
     "\n",
@@ -517,7 +509,17 @@
     "\n",
     "- **The answer:** this is what is actually being tested in the F-tests. Since we can write the treatment and interaction group means as functions of these effects, it is sufficient (and traditional) to focus on the effects.\n",
     "\n",
-    "- But to reiterate, because the effects are functions of the group means, we can still think of these tests as being related to the group means, because they are!"
+    "- But to reiterate, because the effects are functions of the group means, we can still think of these tests as being related to the group means, because they are!\n",
+    "\n",
+    "- Here is our ANOVA table for a two treatment effect design:\n",
+    "\n",
+    "| Source | df | SS | MS | F-Statistic |\n",
+    "| :--- | :--- | :--- | :--- | :--- |\n",
+    "| A | $I-1$ | $SSA$ | $SSA/(I-1)$ | $MSA/MSE$ |\n",
+    "| B | $J-1$ | $SSB$ | $SSB/(J-1)$ | $MSB/MSE$ |\n",
+    "| AB | $(I-1)(J-1)$ | $SSAB$ | $\\frac{SSAB}{(I-1)(J-1)}$ | $MSAB/MSE$ |\n",
+    "| Error | $(r-1)IJ$ | $SSE$ | $\\frac{SSE}{(r-1)IJ}$ | |\n",
+    "| Total | $rIJ - 1$ | $SST$ | | |"
    ]
   }
  ],
