Adding ANOVA code

--- a/Factorial Designs/Intro-to-Factorial-Designs.ipynb
+++ b/Factorial Designs/Intro-to-Factorial-Designs.ipynb
@@ -519,7 +519,28 @@
     "| B | $J-1$ | $SSB$ | $SSB/(J-1)$ | $MSB/MSE$ |\n",
     "| AB | $(I-1)(J-1)$ | $SSAB$ | $\\frac{SSAB}{(I-1)(J-1)}$ | $MSAB/MSE$ |\n",
     "| Error | $(r-1)IJ$ | $SSE$ | $\\frac{SSE}{(r-1)IJ}$ | |\n",
-    "| Total | $rIJ - 1$ | $SST$ | | |"
+    "| Total | $rIJ - 1$ | $SST$ | | |\n",
+    "\n",
+    "- Let's go ahead and build our model, check the assumptions, and produce our ANOVA table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b25b418c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Import relevant statsmodels and scipy functions ##\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "## Fit the ANOVA Model ##\n",
+    "\n",
+    "mod = ols('Response~Shell*Padding',data=helmet).fit()\n",
+    "\n",
+    "print(sm.stats.anova_lm(mod,typ=3))"
    ]
   }
  ],
