--- a/Fractional Factorial Design/2-3-Factorial-Designs.ipynb
+++ b/Fractional Factorial Design/2-3-Factorial-Designs.ipynb
@@ -14,32 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "fd019d8f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified: 'Fractional Factorial Design'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)\n",
-      "Cell \u001b[1;32mIn[41], line 46\u001b[0m\n",
-      "\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# --- Detect if we're already in a repo ---\u001b[39;00m\n",
-      "\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m#cwd = os.getcwd()\u001b[39;00m\n",
-      "\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m#if cwd.endswith(repo_name):\u001b[39;00m\n",
-      "\u001b[1;32m   (...)\u001b[0m\n",
-      "\u001b[0;32m     42\u001b[0m \n",
-      "\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Set Today's Directory #\u001b[39;00m\n",
-      "\u001b[0;32m     45\u001b[0m today_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFractional Factorial Design\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;32m---> 46\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtoday_dir\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;32m     47\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m📂 Changed directory to: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mgetcwd()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'Fractional Factorial Design'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === COURSE REPO SETUP === #\n",
     "\n",
@@ -85,9 +63,9 @@
     "\n",
     "# Set Today's Directory #\n",
     "\n",
-    "today_dir = \"Fractional Factorial Design\"\n",
-    "os.chdir(today_dir)\n",
-    "print(f\"📂 Changed directory to: {os.getcwd()}\")"
+    "#today_dir = \"Fractional Factorial Design\"\n",
+    "#os.chdir(today_dir)\n",
+    "#print(f\"📂 Changed directory to: {os.getcwd()}\")"
    ]
   },
   {
